@@ -48,6 +48,7 @@
 #include <R.h>
 #include <Rinternals.h>
 #include <R_ext/Callbacks.h>
+#include <R_ext/Complex.h>
 #include <Rversion.h>
 #define GET_NAMES(x)	Rf_getAttrib(x, R_NamesSymbol)
 #include <Rcpp/Rcpp_Rinternals.h>
